--- a/codingon-spring-boot/build.gradle
+++ b/codingon-spring-boot/build.gradle
@@ -30,6 +30,7 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'com.h2database:h2'
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools' // 변경사항 자동빌드
 
 }
