--- a/servlet/servlet/src/main/resources/application.properties
+++ b/servlet/servlet/src/main/resources/application.properties
@@ -3,3 +3,5 @@ logging.level.org.apache.coyote.http11=trace
 
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
+
+spring.messages.basename=messages,config.i18n.messages
